--- a/week01/project/requirements.txt
+++ b/week01/project/requirements.txt
@@ -1,30 +1,19 @@
-astroid==2.12.12
-attrs==22.1.0
 click==8.1.3
-coverage==6.5.0
-dill==0.3.6
+DateTime==4.7
+docopt==0.6.2
 et-xmlfile==1.1.0
-exceptiongroup==1.0.3
 Flask==2.2.2
-iniconfig==1.1.1
-isort==5.10.1
+Flask-API==3.0.post1
+Flask-SQLAlchemy==3.0.2
+greenlet==2.0.1
 itsdangerous==2.1.2
+jdcal==1.4.1
 Jinja2==3.1.2
-lazy-object-proxy==1.8.0
 MarkupSafe==2.1.1
-mccabe==0.7.0
-openpyxl==3.0.10
-packaging==21.3
-pathlib==1.0.1
-platformdirs==2.5.4
-pluggy==1.0.0
-pydantic==1.10.2
-pylint==2.15.5
-pyparsing==3.0.9
-pytest==7.2.0
-pytest-cov==4.0.0
-tomli==2.0.1
-tomlkit==0.11.6
-typing_extensions==4.4.0
+openpyxl==2.4.11
+pytz==2022.6
+records==0.5.3
+SQLAlchemy==1.4.44
+tablib==3.2.1
 Werkzeug==2.2.2
-wrapt==1.14.1
+zope.interface==5.5.2
